# mace_lammps_plugin

./: .gitignore  CMakeLists.txt  README.md
src/: pair_mace.cpp  pair_mace.h
src/plugin/: CMakeLists.txt  mace_lmpplugin.cpp
test/: data.water  in.lammps
